--- a/agents/aide/config.yaml
+++ b/agents/aide/config.yaml
@@ -1,17 +1,13 @@
-vars:
-  step_count: &step_count 2000
-  time_limit: &time_limit 43200 # total time limit
-
 defaults: &defaults
   start: aide/start.sh
   dockerfile: aide/Dockerfile
   kwargs_type: omegaconf
   env_vars: &env_vars
-    TIME_LIMIT_SECS: *time_limit
-    STEP_LIMIT: *step_count
+    TIME_LIMIT_SECS: ${{ env.BMLB_TIME_LIMIT_SECS }}
+    STEP_LIMIT: ${{ env.BMLB_STEP_LIMIT }}
 
 kwargs_common: &kwargs_common
-  agent.steps: *step_count
+  agent.steps: ${{ env.BMLB_STEP_LIMIT }}
   exec.timeout: 3600 # time limit per step
 
 aide:
@@ -24,9 +20,3 @@ aide:
     <<: *env_vars
     OPENAI_API_KEY: ${{ env.OPENROUTER_API_KEY }}
     OPENAI_BASE_URL: ${{ env.OPENROUTER_BASE_URL }}
-    http_proxy: ${{ env.http_proxy }}
-    https_proxy: ${{ env.https_proxy }}
-    HTTP_PROXY: ${{ env.HTTP_PROXY }}
-    HTTPS_PROXY: ${{ env.HTTPS_PROXY }}
-    no_proxy: ${{ env.no_proxy }}
-    NO_PROXY: ${{ env.NO_PROXY }}
