--- a/agents/biomni/config.yaml
+++ b/agents/biomni/config.yaml
@@ -14,3 +14,7 @@ biomni:
     BIOMNI_LLM_MODEL: ${{ env.BIOMNI_LLM_MODEL }}
     BIOMNI_CUSTOM_BASE_URL: ${{ env.BIOMNI_CUSTOM_BASE_URL }}
     BIOMNI_CUSTOM_API_KEY: ${{ env.BIOMNI_CUSTOM_API_KEY }}
+    http_proxy: ${{ env.http_proxy }}
+    https_proxy: ${{ env.https_proxy }}
+    HTTP_PROXY: ${{ env.HTTP_PROXY }}
+    HTTPS_PROXY: ${{ env.HTTPS_PROXY }}
