--- a/agents/aide/config.yaml
+++ b/agents/aide/config.yaml
@@ -20,3 +20,7 @@ aide:
     <<: *env_vars
     OPENAI_API_KEY: ${{ env.OPENROUTER_API_KEY }}
     OPENAI_BASE_URL: ${{ env.OPENROUTER_BASE_URL }}
+    http_proxy: ${{ env.http_proxy }}
+    https_proxy: ${{ env.https_proxy }}
+    HTTP_PROXY: ${{ env.HTTP_PROXY }}
+    HTTPS_PROXY: ${{ env.HTTPS_PROXY }}
