no proxy env vars

--- a/agents/biomni/config.yaml
+++ b/agents/biomni/config.yaml
@@ -18,3 +18,5 @@ biomni:
     https_proxy: ${{ env.https_proxy }}
     HTTP_PROXY: ${{ env.HTTP_PROXY }}
     HTTPS_PROXY: ${{ env.HTTPS_PROXY }}
+    no_proxy: ${{ env.no_proxy }}
+    NO_PROXY: ${{ env.NO_PROXY }}
