--- a/agents/mlagentbench/config.yaml
+++ b/agents/mlagentbench/config.yaml
@@ -19,3 +19,5 @@ mlagentbench:
     https_proxy: ${{ env.https_proxy }}
     HTTP_PROXY: ${{ env.HTTP_PROXY }}
     HTTPS_PROXY: ${{ env.HTTPS_PROXY }}
+    no_proxy: ${{ env.no_proxy }}
+    NO_PROXY: ${{ env.NO_PROXY }}
