--- a/agents/mlagentbench/config.yaml
+++ b/agents/mlagentbench/config.yaml
@@ -18,3 +18,9 @@ mlagentbench:
     OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     TIME_LIMIT_SECS: *time_limit
     STEP_LIMIT: *step_count
+    http_proxy: ${{ env.http_proxy }}
+    https_proxy: ${{ env.https_proxy }}
+    HTTP_PROXY: ${{ env.HTTP_PROXY }}
+    HTTPS_PROXY: ${{ env.HTTPS_PROXY }}
+    no_proxy: ${{ env.no_proxy }}
+    NO_PROXY: ${{ env.NO_PROXY }}
