--- a/agents/biomni/config.yaml
+++ b/agents/biomni/config.yaml
@@ -13,3 +13,9 @@ biomni:
     TIME_LIMIT_SECS: *time_limit
     STEP_LIMIT: *step_count
     ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+    http_proxy: ${{ env.http_proxy }}
+    https_proxy: ${{ env.https_proxy }}
+    HTTP_PROXY: ${{ env.HTTP_PROXY }}
+    HTTPS_PROXY: ${{ env.HTTPS_PROXY }}
+    no_proxy: ${{ env.no_proxy }}
+    NO_PROXY: ${{ env.NO_PROXY }}
