--- a/agents/stella/config.yaml
+++ b/agents/stella/config.yaml
@@ -19,4 +19,10 @@ stella:
     OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
     ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
     MEM0_API_KEY: ${{ secrets.MEM0_API_KEY }}
-    GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} 
+    GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+    http_proxy: ${{ env.http_proxy }}
+    https_proxy: ${{ env.https_proxy }}
+    HTTP_PROXY: ${{ env.HTTP_PROXY }}
+    HTTPS_PROXY: ${{ env.HTTPS_PROXY }}
+    no_proxy: ${{ env.no_proxy }}
+    NO_PROXY: ${{ env.NO_PROXY }} 
