--- a/agents/mlagentbench/config.yaml
+++ b/agents/mlagentbench/config.yaml
@@ -7,17 +7,18 @@ mlagentbench:
   dockerfile: mlagentbench/Dockerfile
   kwargs_type: argparse
   kwargs: # Args for MLAgentBench.runner
-    llm-name: gpt-4.1-2025-04-14
-    edit-script-llm-name: gpt-4.1-2025-04-14
-    fast-llm-name: gpt-4.1-2025-04-14
-    max-steps: *step_count
-    agent-max-steps: *step_count # Some MLAB agents have their own max-steps which is separate from the env max-steps; for ResearchAgent, these should be the same
-    max-time: *time_limit
+    llm-name: ${{ env.OPENROUTER_MODEL }}
+    edit-script-llm-name: ${{ env.OPENROUTER_MODEL }}
+    fast-llm-name: ${{ env.OPENROUTER_MODEL }}
+    max-steps: ${{ env.BMLB_STEP_LIMIT }}
+    agent-max-steps: ${{ env.BMLB_STEP_LIMIT }}
+    max-time: ${{ env.BMLB_TIME_LIMIT_SECS }}
     max-retries: 10 # retry if the agent doesn't give a valid action response
   env_vars:
-    OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-    TIME_LIMIT_SECS: *time_limit
-    STEP_LIMIT: *step_count
+    OPENAI_API_KEY: ${{ env.OPENROUTER_API_KEY }}
+    OPENAI_BASE_URL: ${{ env.OPENROUTER_BASE_URL }}
+    TIME_LIMIT_SECS: ${{ env.BMLB_TIME_LIMIT_SECS }}
+    STEP_LIMIT: ${{ env.BMLB_STEP_LIMIT }}
     http_proxy: ${{ env.http_proxy }}
     https_proxy: ${{ env.https_proxy }}
     HTTP_PROXY: ${{ env.HTTP_PROXY }}
