--- a/agents/aide/Dockerfile
+++ b/agents/aide/Dockerfile
@@ -1,19 +1,28 @@
 FROM biomlbench-env
 
 # where to put submission, will be extracted
-ARG SUBMISSION_DIR
+ARG SUBMISSION_DIR=/home/submission
 ENV SUBMISSION_DIR=${SUBMISSION_DIR}
 # where to put any logs, will be extracted
-ARG LOGS_DIR
+ARG LOGS_DIR=/home/logs
 ENV LOGS_DIR=${LOGS_DIR}
 # where to put any code, will be extracted
-ARG CODE_DIR
+ARG CODE_DIR=/home/code
 ENV CODE_DIR=${CODE_DIR}
 # where to put any other agent-specific files, will not be necessarily extracted
-ARG AGENT_DIR
+ARG AGENT_DIR=/home/agent
 ENV AGENT_DIR=${AGENT_DIR}
 
-RUN mkdir ${LOGS_DIR} ${CODE_DIR} ${AGENT_DIR}
+ARG HTTP_PROXY=
+ARG HTTPS_PROXY=
+ARG http_proxy=
+ARG https_proxy=
+ENV HTTP_PROXY=${HTTP_PROXY}
+ENV HTTPS_PROXY=${HTTPS_PROXY}
+ENV http_proxy=${http_proxy}
+ENV https_proxy=${https_proxy}
+
+RUN mkdir -p ${LOGS_DIR} ${CODE_DIR} ${AGENT_DIR}
 
 ARG CONDA_ENV_NAME=agent
 ARG REQUIREMENTS=${AGENT_DIR}/requirements.txt
