Revert "agentomics implementation"
This reverts commit f551dd88f67ebceb3916fe3cebf20414fd307721.

--- a/agents/mlagentbench/config.yaml
+++ b/agents/mlagentbench/config.yaml
@@ -1,3 +1,7 @@
+vars:
+  time_limit: &time_limit 43200 
+  step_count: &step_count 2000
+
 mlagentbench:
   start: mlagentbench/start.sh
   dockerfile: mlagentbench/Dockerfile
