--- a/agents/aide/config.yaml
+++ b/agents/aide/config.yaml
@@ -1,13 +1,17 @@
+vars:
+  step_count: &step_count 2000
+  time_limit: &time_limit 43200 # total time limit
+
 defaults: &defaults
   start: aide/start.sh
   dockerfile: aide/Dockerfile
   kwargs_type: omegaconf
   env_vars: &env_vars
-    TIME_LIMIT_SECS: ${{ env.BMLB_TIME_LIMIT_SECS }}
-    STEP_LIMIT: ${{ env.BMLB_STEP_LIMIT }}
+    TIME_LIMIT_SECS: *time_limit
+    STEP_LIMIT: *step_count
 
 kwargs_common: &kwargs_common
-  agent.steps: ${{ env.BMLB_STEP_LIMIT }}
+  agent.steps: *step_count
   exec.timeout: 3600 # time limit per step
 
 aide:
