--- a/agents/biomni/config.yaml
+++ b/agents/biomni/config.yaml
@@ -1,3 +1,7 @@
+vars:
+  step_count: &step_count 2000
+  time_limit: &time_limit 43200 # total time limit
+
 biomni:
   start: biomni/start.sh
   dockerfile: biomni/Dockerfile
