--- a/agents/stella/config.yaml
+++ b/agents/stella/config.yaml
@@ -1,3 +1,7 @@
+vars:
+  step_count: &step_count 2000
+  time_limit: &time_limit 57600  # 16 hours
+
 stella:
   start: stella/start.sh
   dockerfile: stella/Dockerfile
