Fix BioMNI OpenRouter integration
- Update main.py to read LLM_SOURCE, CUSTOM_MODEL_BASE_URL, CUSTOM_MODEL_API_KEY env vars
- Pass source, base_url, api_key parameters to A1 initialization
- Update config.yaml to use correct BioMNI env var names (not BIOMNI_* prefix)
- Update build_agent.sh validation to use correct env var names

This fixes the issue where BioMNI was using Ollama instead of OpenRouter.
BioMNI's A1 class expects these specific env var names per the original repo.

--- a/agents/biomni/config.yaml
+++ b/agents/biomni/config.yaml
@@ -7,9 +7,6 @@ biomni:
   env_vars:
     TIME_LIMIT_SECS: ${{ env.BMLB_TIME_LIMIT_SECS }}
     STEP_LIMIT: ${{ env.BMLB_STEP_LIMIT }}
-    OPENROUTER_API_KEY: ${{ env.OPENROUTER_API_KEY }}
-    OPENROUTER_BASE_URL: ${{ env.OPENROUTER_BASE_URL }}
-    BIOMNI_SOURCE: ${{ env.BIOMNI_SOURCE }}
-    BIOMNI_LLM_MODEL: ${{ env.BIOMNI_LLM_MODEL }}
-    BIOMNI_CUSTOM_BASE_URL: ${{ env.BIOMNI_CUSTOM_BASE_URL }}
-    BIOMNI_CUSTOM_API_KEY: ${{ env.BIOMNI_CUSTOM_API_KEY }}
+    LLM_SOURCE: ${{ env.LLM_SOURCE }}
+    CUSTOM_MODEL_BASE_URL: ${{ env.CUSTOM_MODEL_BASE_URL }}
+    CUSTOM_MODEL_API_KEY: ${{ env.CUSTOM_MODEL_API_KEY }}
