Clone MLAgentBench from GitHub during Docker build
Modified Dockerfile to clone MLAgentBench repository directly from
https://github.com/snap-stanford/MLAgentBench.git instead of expecting
a local copy in ./ref/MLAgentBench. This makes the build self-contained
and consistent with AIDE and BioMNI agent patterns.

--- a/agents/mlagentbench/Dockerfile
+++ b/agents/mlagentbench/Dockerfile
@@ -29,9 +29,10 @@ RUN conda run -n ${CONDA_ENV_NAME} pip install --upgrade pip && \
     conda run -n ${CONDA_ENV_NAME} pip install --upgrade "openai>=1.50.0" && \
     conda clean -afy
 
+# Clone MLAgentBench repository
+RUN git clone https://github.com/snap-stanford/MLAgentBench.git ${AGENT_DIR}/MLAgentBench
 
-# copy local MLAgentBench directory for debugging
-COPY ./ref/MLAgentBench ${AGENT_DIR}/MLAgentBench
+# Copy benchmark directory
 COPY ./benchmark_dir ${AGENT_DIR}/MLAgentBench/MLAgentBench/benchmarks/biomlbench
 
 # put remaining necessary agent files in the expected location
