--- a/agents/stella/config.yaml
+++ b/agents/stella/config.yaml
@@ -4,8 +4,8 @@ stella:
   kwargs_type: argparse
   kwargs:
     model: ${{ env.OPENROUTER_MODEL }}
-    max_tools: 60
-    timeout_seconds: 3600
+    max_tools: ${{ env.BMLB_STEP_LIMIT }}
+    timeout_seconds: ${{ env.BMLB_TIME_LIMIT_SECS }}
     # Note: use_templates and use_mem0 are action="store_true" flags
     # Only include them in kwargs if you want them to be True
     # For benchmarking (zero-shot), we want both False, so we omit them
@@ -14,6 +14,7 @@ stella:
     STEP_LIMIT: ${{ env.BMLB_STEP_LIMIT }}
     OPENROUTER_API_KEY: ${{ env.OPENROUTER_API_KEY }}
     OPENROUTER_BASE_URL: ${{ env.OPENROUTER_BASE_URL }}
+    OPENROUTER_MODEL: ${{ env.OPENROUTER_MODEL }}
     ANTHROPIC_API_KEY: ${{ env.ANTHROPIC_API_KEY }}
     MEM0_API_KEY: ${{ env.MEM0_API_KEY }}
     GEMINI_API_KEY: ${{ env.GEMINI_API_KEY }}
