biomni hidden self critic???

--- a/agents/biomni/config.yaml
+++ b/agents/biomni/config.yaml
@@ -10,3 +10,5 @@ biomni:
     LLM_SOURCE: ${{ env.LLM_SOURCE }}
     CUSTOM_MODEL_BASE_URL: ${{ env.CUSTOM_MODEL_BASE_URL }}
     CUSTOM_MODEL_API_KEY: ${{ env.CUSTOM_MODEL_API_KEY }}
+    BIOMNI_SELF_CRITIC: ${{ env.BIOMNI_SELF_CRITIC }}
+    BIOMNI_ITERATIONS: ${{ env.BIOMNI_ITERATIONS }}
