--- a/agents/stella/config.yaml
+++ b/agents/stella/config.yaml
@@ -6,9 +6,9 @@ stella:
     model: ${{ env.OPENROUTER_MODEL }}
     max_tools: ${{ env.BMLB_STEP_LIMIT }}
     timeout_seconds: ${{ env.BMLB_TIME_LIMIT_SECS }}
+    use_templates: true
     # Note: use_templates and use_mem0 are action="store_true" flags
-    # Only include them in kwargs if you want them to be True
-    # For benchmarking (zero-shot), we want both False, so we omit them
+    # Now enabling templates to activate STELLA's iterative workflow with critic agent
   env_vars:
     TIME_LIMIT_SECS: ${{ env.BMLB_TIME_LIMIT_SECS }}
     STEP_LIMIT: ${{ env.BMLB_STEP_LIMIT }}
